Add a mojom for delivering pointer events in packets
We don't use this interface yet.

--- a/engine/src/flutter/sky/services/pointer/BUILD.gn
+++ b/engine/src/flutter/sky/services/pointer/BUILD.gn
@@ -6,11 +6,6 @@ import("//mojo/public/tools/bindings/mojom.gni")
 
 mojom("interfaces") {
   sources = [
-    "input_event.mojom",
-    "sky_engine.mojom",
-  ]
-
-  deps = [
-    "//sky/services/pointer:interfaces"
+    "pointer.mojom",
   ]
 }
