Move lerp for the engine types into dart:sky
This patch just adds them to dart:sky. A future patch will actually use them in
the framework once we've published an updated sky_engine package. Also, add
dartdoc to the classes touched in this patch.

--- a/engine/src/flutter/sky/engine/bindings/scripts/templates/dart_blink.template
+++ b/engine/src/flutter/sky/engine/bindings/scripts/templates/dart_blink.template
@@ -25,3 +25,14 @@ final Tracing tracing = new Tracing();
 View view;
 
 typedef EventListener(Event event);
+
+/// Linearly interpolate between two numbers.
+double lerpDouble(double a, double b, double t) {
+  if (a == null && b == null)
+    return null;
+  if (a == null)
+    a = 0.0;
+  if (b == null)
+    b = 0.0;
+  return a + (b - a) * t;
+}
