Implement platform VSyncProvider for iOS

--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -211,9 +211,10 @@ if (is_android) {
 
     deps = common_deps + [
              ":common",
-             "//sky/services/ns_net",
              "//sky/services/keyboard",
              "//sky/services/media",
+             "//sky/services/ns_net",
+             "//sky/services/vsync",
            ]
   }
 
