Make travis green

--- a/engine/src/flutter/.travis.yml
+++ b/engine/src/flutter/.travis.yml
@@ -1,6 +1,16 @@
 language: cpp
+compiler:
+  - gcc
 before_install:
-  - ./travis/before_install.sh
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq 
+install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update
+  - sudo apt-get install g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - sudo apt-get install libstdc++-4.8-dev
 before_script:
   - ./travis/setup.sh
 script: ./travis/build.sh
