Use Travis container-based infrastructure

--- a/engine/src/flutter/.travis.yml
+++ b/engine/src/flutter/.travis.yml
@@ -1,16 +1,14 @@
 language: cpp
+sudo: false
 compiler:
   - gcc
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq 
-install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update
-  - sudo apt-get install g++-4.8
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
-  - sudo apt-get install libstdc++-4.8-dev
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
 before_script:
   - ./travis/setup.sh
 script: ./travis/build.sh
