Sketch a DOM-free API for laying out and painting text
Rather than using the DOM to upload text and styling information into the
engine, this patch begins sketching a more direct API that bypasses the DOM and
CSS. Currently, this API doesn't do anything, but it's a first step.

The approach is to have a ParagraphBuilder object that can record a tree of
style interior nodes and text leaves. The build() function then applies
container-level styling information (such as TextAlign) and returns a Paragraph
object that can undergo layout and paint.

The inputs to the builder process are immutable style objects constructed from
primitive values. These primitives are currently carbon-copies of the primitive
we use in the framework today. After this patch lands, I'll convert the frame
to re-expose these values instead of re-defining them.

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -625,6 +625,20 @@ sky_core_files = [
   "script/dom_dart_state.cc",
   "script/dom_dart_state.h",
   "script/monitor.h",
+  "text/FontStyle.h",
+  "text/FontWeight.h",
+  "text/Paragraph.cpp",
+  "text/Paragraph.h",
+  "text/ParagraphBuilder.cpp",
+  "text/ParagraphBuilder.h",
+  "text/ParagraphStyle.cpp",
+  "text/ParagraphStyle.h",
+  "text/TextAlign.h",
+  "text/TextBaseline.h",
+  "text/TextDecoration.h",
+  "text/TextDecorationStyle.h",
+  "text/TextStyle.cpp",
+  "text/TextStyle.h",
   "view/EventCallback.h",
   "view/FrameCallback.h",
   "view/View.cpp",
@@ -690,6 +704,10 @@ core_idl_files = get_path_info([
                                  "painting/PictureRecorder.idl",
                                  "painting/RRect.idl",
                                  "painting/Shader.idl",
+                                 "text/Paragraph.idl",
+                                 "text/ParagraphBuilder.idl",
+                                 "text/ParagraphStyle.idl",
+                                 "text/TextStyle.idl",
                                  "view/EventCallback.idl",
                                  "view/FrameCallback.idl",
                                  "view/View.idl",
@@ -712,6 +730,12 @@ core_dart_files = get_path_info([
                                   "painting/RSTransform.dart",
                                   "painting/Size.dart",
                                   "painting/TransferMode.dart",
+                                  "text/FontStyle.dart",
+                                  "text/FontWeight.dart",
+                                  "text/TextAlign.dart",
+                                  "text/TextBaseline.dart",
+                                  "text/TextDecoration.dart",
+                                  "text/TextDecorationStyle.dart",
                                 ],
                                 "abspath")
 
