Fix minor problems in _ScrollGestureRecognizer, Dismissable
Alternating scroll gestures would sometimes be ignored because _ScrollGestureRecognizer didn't always reset its _state when the pointer[s] went up.

A Dismissable dismiss triggered by a drag and then a fling could cause the next attempt to drag-dimiss to fail.

Fixed the definition of lerpColor().

--- a/engine/src/flutter/sky/engine/bindings/scripts/templates/dart_blink.template
+++ b/engine/src/flutter/sky/engine/bindings/scripts/templates/dart_blink.template
@@ -27,7 +27,7 @@ View view;
 typedef EventListener(Event event);
 
 /// Linearly interpolate between two numbers.
-double lerpDouble(double a, double b, double t) {
+num lerpDouble(num a, num b, double t) {
   if (a == null && b == null)
     return null;
   if (a == null)
