Pass the sky::LayerTree to the GPU thread for drawing
Instead of squashing the layers down into a single SkPicture, we now pass the
tree to the GPU thread, which draws everything separately.

--- a/engine/src/flutter/sky/engine/public/sky/BUILD.gn
+++ b/engine/src/flutter/sky/engine/public/sky/BUILD.gn
@@ -8,6 +8,7 @@ source_set("sky") {
     "//mojo/public/cpp/system",
     "//mojo/services/network/public/interfaces",
     "//skia",
+    "//sky/compositor",
     "//sky/engine/core",
     "//sky/engine/platform",
     "//sky/engine/wtf",
