Setup mac target for Fitness app

--- a/engine/src/flutter/examples/fitness/BUILD.gn
+++ b/engine/src/flutter/examples/fitness/BUILD.gn
@@ -19,5 +19,8 @@ sky_app("fitness") {
     launcher_resources = [
       "ios/LaunchScreen.storyboardc",
     ]
+  } else if (is_mac) {
+    info_plist = "mac/Info.plist"
+    xibs = [ "mac/sky_mac.xib" ]
   }
 }
