--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -4,10 +4,26 @@
 
 source_set("compositor") {
   sources = [
-    "layer_tree.cc",
-    "layer_tree.h",
+    "clip_path_layer.cc",
+    "clip_path_layer.h",
+    "clip_rect_layer.cc",
+    "clip_rect_layer.h",
+    "clip_rrect_layer.cc",
+    "clip_rrect_layer.h",
+    "color_filter_layer.cc",
+    "color_filter_layer.h",
+    "container_layer.cc",
+    "container_layer.h",
     "layer.cc",
     "layer.h",
+    "layer_tree.cc",
+    "layer_tree.h",
+    "opacity_layer.cc",
+    "opacity_layer.h",
+    "picture_layer.cc",
+    "picture_layer.h",
+    "transform_layer.cc",
+    "transform_layer.h",
   ]
 
   deps = [
