--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -408,6 +408,8 @@ sky_core_files = [
   "painting/DrawLooperLayerInfo.cpp",
   "painting/DrawLooperLayerInfo.h",
   "painting/FilterQuality.h",
+  "painting/ImageShader.cpp",
+  "painting/ImageShader.h",
   "painting/LayerDrawLooperBuilder.cpp",
   "painting/LayerDrawLooperBuilder.h",
   "painting/LayoutRoot.cpp",
@@ -649,6 +651,7 @@ core_idl_files = get_path_info([
                                  "painting/DrawLooperLayerInfo.idl",
                                  "painting/Gradient.idl",
                                  "painting/Image.idl",
+                                 "painting/ImageShader.idl",
                                  "painting/LayerDrawLooperBuilder.idl",
                                  "painting/LayoutRoot.idl",
                                  "painting/MaskFilter.idl",
@@ -673,6 +676,7 @@ core_dart_files = get_path_info([
                                   "painting/DrawLooperLayerInfo.dart",
                                   "painting/FilterQuality.dart",
                                   "painting/Gradient.dart",
+                                  "painting/ImageShader.dart",
                                   "painting/MaskFilter.dart",
                                   "painting/Offset.dart",
                                   "painting/OffsetBase.dart",
