Adds bindings to Skia for VertexMode and drawVertices

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -440,6 +440,7 @@ sky_core_files = [
   "painting/Size.cpp",
   "painting/Size.h",
   "painting/TransferMode.h",
+  "painting/VertexMode.h",
   "rendering/BidiRun.h",
   "rendering/BidiRunForLine.cpp",
   "rendering/BidiRunForLine.h",
@@ -687,6 +688,7 @@ core_dart_files = get_path_info([
                                   "painting/RSTransform.dart",
                                   "painting/Size.dart",
                                   "painting/TransferMode.dart",
+                                  "painting/VertexMode.dart",
                                   "text/FontStyle.dart",
                                   "text/FontWeight.dart",
                                   "text/TextAlign.dart",
