Initial support for the fling gesture detector
Added FlingGestureRecognizer and exposed it in the GestureDetector class. FlingGestureRecognizer is based on the Android/Chromium VelocityTracker class which computes a velocity vector for for a list of X,Y,Time tuples.

The Scrollable classes now use the FlingGestureRecognizer. Dismissable and Drawer still need to be updated

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -320,10 +320,14 @@ sky_core_files = [
   "events/EventSender.h",
   "events/GestureEvent.cpp",
   "events/GestureEvent.h",
+  "events/GestureVelocity.cpp",
+  "events/GestureVelocity.h",
   "events/KeyboardEvent.cpp",
   "events/KeyboardEvent.h",
   "events/PointerEvent.cpp",
   "events/PointerEvent.h",
+  "events/VelocityTracker.cpp",
+  "events/VelocityTracker.h",
   "events/WheelEvent.cpp",
   "events/WheelEvent.h",
   "frame/ConsoleTypes.h",
@@ -634,8 +638,10 @@ core_idl_files = get_path_info([
                                  "dom/Text.idl",
                                  "events/Event.idl",
                                  "events/GestureEvent.idl",
+                                 "events/GestureVelocity.idl",
                                  "events/KeyboardEvent.idl",
                                  "events/PointerEvent.idl",
+                                 "events/VelocityTracker.idl",
                                  "events/WheelEvent.idl",
                                  "frame/Tracing.idl",
                                  "frame/Window.idl",
