--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -12,6 +12,9 @@ source_set("compositor") {
     "clip_rrect_layer.h",
     "color_filter_layer.cc",
     "color_filter_layer.h",
+    "compositor_config.h",
+    "compositor_tools.cc",
+    "compositor_tools.h",
     "container_layer.cc",
     "container_layer.h",
     "layer.cc",
