Rename compositor_tools -> checkerboard

--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -4,6 +4,8 @@
 
 source_set("compositor") {
   sources = [
+    "checkerboard.cc",
+    "checkerboard.h",
     "clip_path_layer.cc",
     "clip_path_layer.h",
     "clip_rect_layer.cc",
@@ -13,8 +15,6 @@ source_set("compositor") {
     "color_filter_layer.cc",
     "color_filter_layer.h",
     "compositor_config.h",
-    "compositor_tools.cc",
-    "compositor_tools.h",
     "container_layer.cc",
     "container_layer.h",
     "layer.cc",
