--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -14,7 +14,8 @@ source_set("compositor") {
     "clip_rrect_layer.h",
     "color_filter_layer.cc",
     "color_filter_layer.h",
-    "compositor_config.h",
+    "compositor_options.cc",
+    "compositor_options.h",
     "container_layer.cc",
     "container_layer.h",
     "layer.cc",
