Instrument basic metrics within the compositor

--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -18,6 +18,8 @@ source_set("compositor") {
     "compositor_options.h",
     "container_layer.cc",
     "container_layer.h",
+    "instrumentation.cc",
+    "instrumentation.h",
     "layer.cc",
     "layer.h",
     "layer_tree.cc",
