Teach sky.Paragraph how to actually compute layout
Previously layout was exiting early because the frame view
was null. Now we actually compute some layout and paint the
text. This patch makes paragraph_builder_test pass.

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -610,6 +610,7 @@ sky_core_files = [
   "text/ParagraphStyle.h",
   "text/TextAlign.h",
   "text/TextBaseline.h",
+  "text/TextDecoration.cpp",
   "text/TextDecoration.h",
   "text/TextDecorationStyle.h",
   "text/TextStyle.cpp",
