--- a/engine/src/flutter/sky/packages/sky_engine/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky_engine/pubspec.yaml
@@ -2,7 +2,7 @@ name: sky_engine
 version: 0.0.23
 author: Chromium Authors <sky-dev@googlegroups.com>
 description: Dart SDK extensions for dart:sky
-homepage: https://github.com/domokit/sky_engine
+homepage: http://flutter.io
 # sky_engine requires sdk_ext support in the analyzer which was added in 1.11.x
 environment:
   sdk: '>=1.11.0 <2.0.0'
