--- a/engine/src/flutter/sky/packages/sky_services/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky_services/pubspec.yaml
@@ -1,8 +1,8 @@
 name: sky_services
 version: 0.0.23
 author: Chromium Authors <sky-dev@googlegroups.com>
-description: Mojom interfaces associated with Sky
-homepage: https://github.com/domokit/sky_engine/tree/master/sky/packages/sky_services
+description: Mojom interfaces associated with Flutter
+homepage: http://flutter.io
 dependencies:
   mojo: ^0.0.21
 environment:
