--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -40,6 +40,7 @@ source_set("compositor") {
     "//base",
     "//skia",
     "//sky/engine/wtf",
-    "//ui/gfx"
+    "//ui/gfx",
+    "//ui/gfx/geometry",
   ]
 }
