--- a/engine/src/flutter/sky/engine/public/sky/BUILD.gn
+++ b/engine/src/flutter/sky/engine/public/sky/BUILD.gn
@@ -21,6 +21,8 @@ source_set("sky") {
   ]
 
   sources = [
+    "sky_headless.cc",
+    "sky_headless.h",
     "sky_view.cc",
     "sky_view.h",
     "sky_view_client.cc",
