--- a/engine/src/flutter/sky/packages/updater/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/updater/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sky_updater
 version: 0.0.1
-author: Chromium Authors <sky-dev@googlegroups.com>
+author: Flutter Authors <flutter-dev@googlegroups.com>
 description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
