--- a/engine/src/flutter/sky/packages/material_design_icons/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/material_design_icons/pubspec.yaml
@@ -1,5 +1,5 @@
 name: material_design_icons
 version: 0.0.3
-author: Chromium Authors <sky-dev@googlegroups.com>
+author: Flutter Authors <flutter-dev@googlegroups.com>
 description: Material Design Icons
 homepage: https://github.com/flutter/engine
