--- a/engine/src/flutter/sky/packages/sky/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sky
 version: 0.0.51
-author: Chromium Authors <sky-dev@googlegroups.com>
+author: Flutter Authors <flutter-dev@googlegroups.com>
 description: A framework for writing Flutter applications
 homepage: http://flutter.io
 dependencies:
