Implement working UpdateTask in Dart
Dart code now supports the full flow that the C++ code used to: version check,
download, replace app bundle. Bonus: the Dart code is much easier to follow,
thanks to async/await!

This is part 2 of a 3-part change. The first part added new mojom
interfaces, PathService and UpdateService, to the sky_services package.

--- a/engine/src/flutter/sky/packages/updater/BUILD.gn
+++ b/engine/src/flutter/sky/packages/updater/BUILD.gn
@@ -25,6 +25,8 @@ action("updater") {
   ]
 
   deps = [
+    "//sky/services/activity:interfaces",
+    "//sky/services/updater:interfaces",
     "//sky/tools/sky_snapshot($host_toolchain)",
   ]
 }
