Support for decoding images in lists

--- a/engine/src/flutter/sky/engine/tonic/BUILD.gn
+++ b/engine/src/flutter/sky/engine/tonic/BUILD.gn
@@ -53,6 +53,8 @@ source_set("tonic") {
     "float32_list.cc",
     "float32_list.h",
     "mojo_converter.h",
+    "uint8_list.cc",
+    "uint8_list.h",
   ]
 
   deps = [
