Use PrivateDart for ImageDecoder constructors

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -676,6 +676,7 @@ core_idl_files = get_path_info([
                                "abspath")
 
 core_dart_files = get_path_info([
+                                  "loader/ImageDecoder.dart",
                                   "painting/Color.dart",
                                   "painting/ColorFilter.dart",
                                   "painting/DrawLooperLayerInfo.dart",
