--- a/engine/src/flutter/sky/engine/tonic/BUILD.gn
+++ b/engine/src/flutter/sky/engine/tonic/BUILD.gn
@@ -52,6 +52,8 @@ source_set("tonic") {
     "dart_wrapper_info.h",
     "float32_list.cc",
     "float32_list.h",
+    "float64_list.cc",
+    "float64_list.h",
     "mojo_converter.h",
     "uint8_list.cc",
     "uint8_list.h",
