Drain data pipe for images no a background thread
Instead of joining the UI thread to copy data from the network into a buffer,
we now drain the data pipe for image decoding on a background thread.

--- a/engine/src/flutter/sky/engine/platform/BUILD.gn
+++ b/engine/src/flutter/sky/engine/platform/BUILD.gn
@@ -427,6 +427,8 @@ source_set("platform") {
     "image-encoders/skia/JPEGImageEncoder.h",
     "image-encoders/skia/PNGImageEncoder.cpp",
     "image-encoders/skia/PNGImageEncoder.h",
+    "mojo/data_pipe.cc",
+    "mojo/data_pipe.h",
     "text/BidiCharacterRun.cpp",
     "text/BidiCharacterRun.h",
     "text/BidiContext.cpp",
@@ -542,6 +544,7 @@ source_set("platform") {
     ":make_platform_generated",
     "//base:base",
     "//mojo/application",
+    "//mojo/data_pipe_utils",
     "//mojo/environment:chromium",
     "//mojo/public/c/system",
     "//mojo/public/cpp/bindings",
