--- a/engine/src/flutter/sky/packages/sky/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky/pubspec.yaml
@@ -1,18 +1,18 @@
 name: flutter
-version: 0.0.55
+version: 0.1.0
 author: Flutter Authors <flutter-dev@googlegroups.com>
 description: A framework for writing Flutter applications
 homepage: http://flutter.io
 dependencies:
-  cassowary: ^0.1.7
-  material_design_icons: ^0.0.3
+  cassowary: '>=0.1.7 <0.2.0'
+  material_design_icons: '>=0.0.3 <0.1.0'
   mojo_services: '>=0.2.0 <0.3.0'
   mojo: '>=0.2.0 <0.3.0'
-  newton: ^0.1.4
-  sky_engine: ^0.0.33
-  sky_services: ^0.0.32
-  sky_tools: ^0.0.15
-  vector_math: ^1.4.3
-  intl: ^0.12.4+2
+  newton: '>=0.1.4 <0.2.0'
+  sky_engine: '>=0.0.33 <0.1.0'
+  sky_services: '>=0.0.33 <0.1.0'
+  sky_tools: '>=0.0.15 <0.1.0'
+  vector_math: '>=1.4.3 <2.0.0'
+  intl: '>=0.12.4+2 <0.13.0'
 environment:
   sdk: '>=1.12.0 <2.0.0'
