Reattach fitness to the build
We can build Fitness again now that playfair has been updated to account for
the package:flutter rename.

--- a/engine/src/flutter/examples/BUILD.gn
+++ b/engine/src/flutter/examples/BUILD.gn
@@ -7,7 +7,7 @@ group("examples") {
 
   deps = [
     "//examples/demo_launcher",
-    #"//examples/fitness",
+    "//examples/fitness",
     "//examples/game",
     "//examples/mine_digger",
     "//examples/rendering",
