--- a/engine/src/flutter/sky/packages/updater/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/updater/pubspec.yaml
@@ -5,7 +5,7 @@ description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
   mojo: '>=0.2.0 <0.3.0'
-  flutter: any
+  flutter: ">=0.0.3 <0.1.0"
   sky_services: any
   path: any
   yaml: any
