--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -9,10 +9,10 @@ source_set("bindings") {
   sources = [
     "builtin.cc",
     "builtin.h",
-    "builtin_natives.cc",
-    "builtin_natives.h",
-    "builtin_sky.cc",
-    "builtin_sky.h",
+    "dart_natives.cc",
+    "dart_natives.h",
+    "dart_ui.cc",
+    "dart_ui.h",
     "dart_callback.cc",
     "dart_callback.h",
     "exception_messages.cc",
@@ -62,7 +62,6 @@ action("generate_snapshot_bin") {
     "//mojo/public/dart/mojo/sdk_ext/src/handle_watcher.dart",
     "//mojo/public/dart/mojo/sdk_ext/src/natives.dart",
     "//mojo/public/dart/mojo/sdk_ext/src/timer_queue.dart",
-    "//sky/engine/bindings/builtin_natives.dart",
     "//sky/engine/bindings/internals.dart",
     "snapshot.dart",
   ]
@@ -75,8 +74,6 @@ action("generate_snapshot_bin") {
 
   dart_mojo_internal_path =
       rebase_path("//mojo/public/dart/mojo/sdk_ext/internal.dart")
-  dart_ui_builtin_natives_path =
-      rebase_path("//sky/engine/bindings/builtin_natives.dart")
   dart_ui_internals_path =
       rebase_path("//sky/engine/bindings/internals.dart")
   dart_ui_path = rebase_path("$bindings_output_dir/dart_ui.dart")
@@ -102,7 +99,6 @@ action("generate_snapshot_bin") {
     "--url_mapping=dart:mojo.internal,$dart_mojo_internal_path",
     "--url_mapping=dart:ui,$dart_ui_path",
     "--url_mapping=dart:ui_internals,$dart_ui_internals_path",
-    "--url_mapping=dart:ui_builtin_natives,$dart_ui_builtin_natives_path",
   ]
 }
 
