--- a/engine/src/flutter/examples/stocks/BUILD.gn
+++ b/engine/src/flutter/examples/stocks/BUILD.gn
@@ -10,5 +10,10 @@ sky_app("stocks") {
 
   if (is_android) {
     apk_name = "Stocks"
+  } else if (is_ios) {
+    info_plist = "ios/Info.plist"
+    launcher_resources = [
+      "ios/LaunchScreen.storyboardc",
+    ]
   }
 }
