Update to mojo 15d4677f174b1862d95545bf9b1866b4338c3e92

--- a/engine/src/flutter/mojo/common/dart/BUILD.gn
+++ b/engine/src/flutter/mojo/common/dart/BUILD.gn
@@ -7,7 +7,7 @@ import("//mojo/public/dart/rules.gni")
 dart_pkg("dart") {
   libs = [ "lib/tracing_helper.dart" ]
   sources = [
-    "lib/trace_provider_impl.dart",
+    "lib/src/trace_provider_impl.dart",
     "pubspec.yaml",
   ]
   deps = [
