Support verifying .flx signatures when updating.
Adds a step to the updater to verify that the new .flx package is signed and
untampered.

Each .flx contains a signed manifest file. The manifest contains a SHA-256 hash
of the .flx contents. See bundle.dart for a description of the new .flx format.

--- a/engine/src/flutter/examples/fitness/sky.yaml
+++ b/engine/src/flutter/examples/fitness/sky.yaml
@@ -1,6 +1,6 @@
 name: fitness
 version: 0.0.1
-update_url: http://localhost:9888/examples/fitness/
+update-url: http://localhost:9888/examples/fitness/
 material-design-icons:
   - name: action/assessment
   - name: action/help
