--- a/engine/src/flutter/examples/stocks/sky.yaml
+++ b/engine/src/flutter/examples/stocks/sky.yaml
@@ -1,3 +1,6 @@
+name: stocks
+version: 0.0.2
+update-url: http://localhost:9888/examples/stocks/
 material-design-icons:
   - name: action/account_balance
   - name: action/assessment
