--- a/engine/src/flutter/sky/packages/sky/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter
-version: 0.0.8
+version: 0.0.9
 author: Flutter Authors <flutter-dev@googlegroups.com>
 description: A framework for writing Flutter applications
 homepage: http://flutter.io
@@ -7,7 +7,7 @@ dependencies:
   cassowary: '>=0.1.7 <0.2.0'
   material_design_icons: '>=0.0.3 <0.1.0'
   mojo_services: '>=0.3.0 <0.4.0'
-  mojo: '>=0.2.0 <0.3.0'
+  mojo: 0.2.0
   newton: '>=0.1.4 <0.2.0'
   sky_engine: 0.0.39
   sky_services: 0.0.39
