Make NewTextPainter actually work
The NewTextPainter is still disabled by default. A future patch will flip the
flag to enable it.

This patch uses a new approach to writing bindings by encoding data into array
buffers. This approach is more efficient than the existing IDL based approach.
If this works out well, we should convert our other performance-sensitive
interfaces to this approach in future patches.

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -598,21 +598,10 @@ sky_core_files = [
   "script/dom_dart_state.cc",
   "script/dom_dart_state.h",
   "script/monitor.h",
-  "text/FontStyle.h",
-  "text/FontWeight.h",
   "text/Paragraph.cpp",
   "text/Paragraph.h",
   "text/ParagraphBuilder.cpp",
   "text/ParagraphBuilder.h",
-  "text/ParagraphStyle.cpp",
-  "text/ParagraphStyle.h",
-  "text/TextAlign.h",
-  "text/TextBaseline.h",
-  "text/TextDecoration.cpp",
-  "text/TextDecoration.h",
-  "text/TextDecorationStyle.h",
-  "text/TextStyle.cpp",
-  "text/TextStyle.h",
   "view/EventCallback.h",
   "view/FrameCallback.h",
   "view/View.cpp",
@@ -666,8 +655,6 @@ core_idl_files = get_path_info([
                                  "painting/Shader.idl",
                                  "text/Paragraph.idl",
                                  "text/ParagraphBuilder.idl",
-                                 "text/ParagraphStyle.idl",
-                                 "text/TextStyle.idl",
                                  "view/EventCallback.idl",
                                  "view/FrameCallback.idl",
                                  "view/View.idl",
@@ -678,6 +665,7 @@ core_dart_files = get_path_info([
                                   "dart/hooks.dart",
                                   "dart/natives.dart",
                                   "dart/lerp.dart",
+                                  "dart/text.dart",
                                   "dart/view.dart",
                                   "dart/window.dart",
                                   "loader/ImageDecoder.dart",
@@ -698,12 +686,6 @@ core_dart_files = get_path_info([
                                   "painting/Size.dart",
                                   "painting/TransferMode.dart",
                                   "painting/VertexMode.dart",
-                                  "text/FontStyle.dart",
-                                  "text/FontWeight.dart",
-                                  "text/TextAlign.dart",
-                                  "text/TextBaseline.dart",
-                                  "text/TextDecoration.dart",
-                                  "text/TextDecorationStyle.dart",
                                 ],
                                 "abspath")
 
